# libxbrRunner

./: .gitignore  CMakeLists.txt  export.cpp  export.h  hq2x.c  hq3x.c  hq4x.c  internal_hqx_common.h  lodepng.cpp  lodepng.h  main.cpp  readme.md
winBatchFiles/: convert_hq2x.bat  convert_hq3x.bat  convert_hq4x.bat  convert_xbr2x.bat  convert_xbr3x.bat  convert_xbr4x.bat  foo.bat  singleFile.bat
